--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
   <main>
     <section class="team-section">
       <div class="team-member">
-        <!-- ここにローカル画像のパスを指定 -->
-        <img src="S__5603390.jpg" alt="栁本 太郎">
-        <h3>栁本 太郎</h3>
+        <!-- ローカル画像ファイルを使う場合は、画像ファイルが同じフォルダにあることを確認 -->
+        <img src="S__5603390.jpg" alt="栁本 浩汰">
+        <h3>栁本 浩汰</h3>
         <p>代表取締役社長</p>
         <p>企業理念を基に、新たな未来を切り開いています。</p>
       </div>
       <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="鈴木 花子">
-        <h3>鈴木 花子</h3>
+        <img src="https://via.placeholder.com/150" alt="田中 満里菜">
+        <h3>田中 満里菜</h3>
         <p>営業部 部長</p>
         <p>お客様のニーズを最優先に、プロジェクトを推進しています。</p>
       </div>
       <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="佐藤 健">
-        <h3>佐藤 健</h3>
+        <img src="https://via.placeholder.com/150" alt="山田 太郎">
+        <h3>山田 太郎</h3>
         <p>開発部 部長</p>
         <p>最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
       </div>
