--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>合同会社アンダーウィル</title>
   <style>
-    /* 全体のスタイル */
     body {
       font-family: 'Arial', sans-serif;
       background-color: #f0f4f8;
@@ -14,7 +13,6 @@
       padding: 0;
     }
 
-    /* ヘッダー */
     header {
       background-color: #2E8B57;
       color: white;
@@ -33,13 +31,11 @@
       font-style: italic;
     }
 
-    /* メインセクション */
     main {
       padding: 40px 10%;
       text-align: center;
     }
 
-    /* 社員情報セクション */
     .team-section {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -76,7 +72,6 @@
       color: #777;
     }
 
-    /* フッター */
     footer {
       background-color: #333;
       color: white;
@@ -97,7 +92,7 @@
   <main>
     <section class="team-section">
       <div class="team-member">
-        <!-- ローカル画像ファイルを使う場合は、画像ファイルが同じフォルダにあることを確認 -->
+        <!-- 画像ファイルのパスを指定 -->
         <img src="S__5603390.jpg" alt="栁本 浩汰">
         <h3>栁本 浩汰</h3>
         <p>代表取締役社長</p>
