--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <main>
     <section class="team-section">
       <div class="team-member">
-        <!-- 画像ファイルのパスを指定 -->
-        <img src="S__5603390.jpg" alt="栁本 浩汰">
+        <!-- GitHubにアップロードした画像のURLを指定 -->
+        <img src="https://github.com/machichi2525/my-website1/raw/main/S__5603390.jpg" alt="栁本 浩汰">
         <h3>栁本 浩汰</h3>
         <p>代表取締役社長</p>
         <p>企業理念を基に、新たな未来を切り開いています。</p>
