--- a/index.html
+++ b/index.html
@@ -5,71 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>合同会社アンダーウィル</title>
   <style>
+    /* 全体のスタイル */
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #f0f4f8;
-      color: #333;
       margin: 0;
       padding: 0;
+      background-color: #f9f9f9;
     }
 
+    /* ヘッダー */
     header {
-      background-color: #2E8B57;
+      background-color: #e63946; /* 赤 */
       color: white;
       padding: 20px;
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+      z-index: 1;
     }
 
-    h1 {
+    .logo-container {
+      display: flex;
+      align-items: center;
+      animation: scroll 10s linear infinite;
+    }
+
+    .logo-container img {
+      width: 50px;
+      margin-right: 20px;
+    }
+
+    .company-name {
       font-size: 2.5em;
-      margin: 0;
+      font-weight: bold;
+      color: #f1faee; /* 薄い黄色 */
     }
 
-    p.tagline {
-      font-size: 1.2em;
-      margin-top: 10px;
+    .tagline {
+      font-size: 1.5em;
       font-style: italic;
     }
 
+    /* スクロールアニメーション */
+    @keyframes scroll {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    /* メインコンテンツ */
     main {
       padding: 40px 10%;
       text-align: center;
     }
 
-    .team-section {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .team-member {
-      background-color: #ffffff;
+    /* 企業理念セクション */
+    .company-vision {
+      background-color: #f1faee; /* 薄い黄色 */
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
+      margin-bottom: 30px;
+      border-radius: 8px;
     }
 
-    .team-member:hover {
-      transform: translateY(-10px);
+    .company-vision h2 {
+      color: #e63946; /* 赤 */
+      font-size: 2.5em;
+      margin-bottom: 10px;
     }
 
-    .team-member img {
-      width: 100%;
-      height: auto;
-      border-radius: 50%;
+    .company-vision p {
+      font-size: 1.2em;
+      color: #333;
     }
 
-    .team-member h3 {
-      margin: 20px 0 10px;
-      font-size: 1.5em;
-      color: #2E8B57;
+    /* 企業概要セクション */
+    .company-info {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
-    .team-member p {
+    .company-info h3 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #e63946; /* 赤 */
+    }
+
+    .company-info p {
       font-size: 1.1em;
-      color: #777;
+      color: #333;
+      margin: 5px 0;
+    }
+
+    .company-info .address,
+    .company-info .contact {
+      margin-bottom: 20px;
+    }
+
+    /* 写真のスタイル */
+    .team-photo {
+      width: 300px;
+      height: 300px;
+      background-image: url('https://github.com/machichi2525/my-website1/raw/main/S__5603390.jpg');
+      background-size: cover;
+      background-position: center;
+      margin: 0 auto;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     footer {
@@ -81,40 +128,52 @@
       bottom: 0;
       width: 100%;
     }
+
   </style>
 </head>
 <body>
+
   <header>
-    <h1>企業理念</h1>
-    <p class="tagline">ーあなたの未来を共に照らすー</p>
+    <div class="logo-container">
+      <!-- ロゴ画像 -->
+      <img src="https://github.com/machichi2525/my-website1/raw/main/uw_%E3%83%AD%E3%82%B4%E2%91%A0.jpg?raw=true" alt="ロゴ">
+      <div>
+        <div class="company-name">合同会社アンダーウィル</div>
+        <div class="tagline">ーあなたの未来を共に照らすー</div>
+      </div>
+    </div>
   </header>
 
   <main>
-    <section class="team-section">
-      <div class="team-member">
-        <!-- GitHubにアップロードした画像のURLを指定 -->
-        <img src="https://github.com/machichi2525/my-website1/raw/main/S__5603390.jpg" alt="栁本 浩汰">
-        <h3>栁本 浩汰</h3>
-        <p>代表取締役社長</p>
-        <p>企業理念を基に、新たな未来を切り開いています。</p>
-      </div>
-      <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="田中 満里菜">
-        <h3>田中 満里菜</h3>
-        <p>営業部 部長</p>
-        <p>お客様のニーズを最優先に、プロジェクトを推進しています。</p>
-      </div>
-      <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="山田 太郎">
-        <h3>山田 太郎</h3>
-        <p>開発部 部長</p>
-        <p>最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
-      </div>
+    <!-- 企業理念セクション -->
+    <section class="company-vision">
+      <h2>企業理念</h2>
+      <p>私たちはお客様の未来を照らし、革新をもたらす企業であり続けます。</p>
     </section>
+
+    <!-- 企業概要セクション -->
+    <section class="company-info">
+      <h3>企業概要</h3>
+      <p class="address">会社名：合同会社アンダーウィル</p>
+      <p class="address">所在地：〒????-???? 〇〇〇〇</p>
+      <p class="contact">代表者：代表取締役　栁本 浩汰</p>
+      <p class="contact">設立：2024年3月14日</p>
+      <p class="contact">資本金：15万円</p>
+      <p class="contact">従業員数：20名（2025年9月現在）</p>
+      <p class="contact">事業内容：通信事業、Webサイト制作、デジタルマーケティング支援、システム開発</p>
+      <p class="contact">主要取引先：株式会社〇〇、株式会社△△、株式会社□□</p>
+      <p class="contact">取引銀行：〇〇銀行 〇〇支店</p>
+      <p class="contact">URL：https://www.〇〇〇</p>
+    </section>
+
+    <!-- 社員写真 -->
+    <div class="team-photo"></div>
+
   </main>
 
   <footer>
     <p>合同会社アンダーウィル - All Rights Reserved</p>
   </footer>
+
 </body>
 </html>
