--- a/index.html
+++ b/index.html
@@ -4,51 +4,157 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>合同会社アンダーウィル</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* 全体のスタイル */
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
+      background-color: #fafafa;
     }
 
-    /* ヘッダー */
     header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       background-color: #e63946; /* 赤 */
       color: white;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      padding: 20px 5%;
       position: relative;
-      z-index: 1;
     }
 
     .logo-container {
       display: flex;
       align-items: center;
-      animation: scroll 10s linear infinite;
+      justify-content: center;
     }
 
     .logo-container img {
-      width: 50px;
-      margin-right: 20px;
+      width: 40px;
+      margin-right: 15px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo-container:hover img {
+      transform: scale(1.1);
     }
 
     .company-name {
       font-size: 2.5em;
-      font-weight: bold;
-      color: #f1faee; /* 薄い黄色 */
+      font-weight: 700;
+      letter-spacing: 2px;
+      text-transform: uppercase;
     }
 
     .tagline {
-      font-size: 1.5em;
+      font-size: 1.2em;
       font-style: italic;
+      margin-top: 5px;
     }
 
-    /* スクロールアニメーション */
-    @keyframes scroll {
+    main {
+      padding: 80px 5% 40px 5%;
+      text-align: center;
+      color: #333;
+    }
+
+    /* 企業理念セクション */
+    .company-vision {
+      max-width: 800px;
+      margin: 0 auto 50px;
+      background-color: #f1faee;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    }
+
+    .company-vision h2 {
+      font-size: 2.5em;
+      color: #e63946; /* 赤 */
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+
+    .company-vision p {
+      font-size: 1.1em;
+      color: #333;
+      line-height: 1.8;
+    }
+
+    /* 企業概要セクション */
+    .company-info {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 30px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    }
+
+    .company-info h3 {
+      font-size: 2em;
+      font-weight: 700;
+      color: #e63946; /* 赤 */
+      margin-bottom: 20px;
+    }
+
+    .company-info p {
+      font-size: 1.1em;
+      margin-bottom: 15px;
+      line-height: 1.6;
+    }
+
+    /* 社員紹介セクション */
+    .team-section {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .team-member {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .team-member:hover {
+      transform: translateY(-10px);
+    }
+
+    .team-member img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .team-member h3 {
+      margin-top: 20px;
+      font-size: 1.5em;
+      color: #e63946;
+      font-weight: 500;
+    }
+
+    .team-member p {
+      font-size: 1.1em;
+      color: #333;
+      font-weight: 400;
+    }
+
+    /* フッター */
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    /* アニメーション */
+    @keyframes logo-scroll {
       0% {
         transform: translateX(100%);
       }
@@ -57,78 +163,9 @@
       }
     }
 
-    /* メインコンテンツ */
-    main {
-      padding: 40px 10%;
-      text-align: center;
+    .logo-container {
+      animation: logo-scroll 20s linear infinite;
     }
-
-    /* 企業理念セクション */
-    .company-vision {
-      background-color: #f1faee; /* 薄い黄色 */
-      padding: 20px;
-      margin-bottom: 30px;
-      border-radius: 8px;
-    }
-
-    .company-vision h2 {
-      color: #e63946; /* 赤 */
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-
-    .company-vision p {
-      font-size: 1.2em;
-      color: #333;
-    }
-
-    /* 企業概要セクション */
-    .company-info {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .company-info h3 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #e63946; /* 赤 */
-    }
-
-    .company-info p {
-      font-size: 1.1em;
-      color: #333;
-      margin: 5px 0;
-    }
-
-    .company-info .address,
-    .company-info .contact {
-      margin-bottom: 20px;
-    }
-
-    /* 写真のスタイル */
-    .team-photo {
-      width: 300px;
-      height: 300px;
-      background-image: url('https://github.com/machichi2525/my-website1/raw/main/S__5603390.jpg');
-      background-size: cover;
-      background-position: center;
-      margin: 0 auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-
   </style>
 </head>
 <body>
@@ -136,7 +173,7 @@
   <header>
     <div class="logo-container">
       <!-- ロゴ画像 -->
-      <img src="https://github.com/machichi2525/my-website1/raw/main/uw_%E3%83%AD%E3%82%B4%E2%91%A0.jpg?raw=true" alt="ロゴ">
+      <img src="https://github.com/machichi2525/my-website1/raw/main/uw_%E3%83%AD%E3%82%B0%E2%91%A0.jpg?raw=true" alt="ロゴ">
       <div>
         <div class="company-name">合同会社アンダーウィル</div>
         <div class="tagline">ーあなたの未来を共に照らすー</div>
@@ -145,30 +182,60 @@
   </header>
 
   <main>
-    <!-- 企業理念セクション -->
+    <!-- 企業理念 -->
     <section class="company-vision">
       <h2>企業理念</h2>
       <p>私たちはお客様の未来を照らし、革新をもたらす企業であり続けます。</p>
     </section>
 
-    <!-- 企業概要セクション -->
+    <!-- 企業概要 -->
     <section class="company-info">
       <h3>企業概要</h3>
-      <p class="address">会社名：合同会社アンダーウィル</p>
-      <p class="address">所在地：〒????-???? 〇〇〇〇</p>
-      <p class="contact">代表者：代表取締役　栁本 浩汰</p>
-      <p class="contact">設立：2024年3月14日</p>
-      <p class="contact">資本金：15万円</p>
-      <p class="contact">従業員数：20名（2025年9月現在）</p>
-      <p class="contact">事業内容：通信事業、Webサイト制作、デジタルマーケティング支援、システム開発</p>
-      <p class="contact">主要取引先：株式会社〇〇、株式会社△△、株式会社□□</p>
-      <p class="contact">取引銀行：〇〇銀行 〇〇支店</p>
-      <p class="contact">URL：https://www.〇〇〇</p>
+      <p><strong>会社名：</strong>合同会社アンダーウィル</p>
+      <p><strong>所在地：</strong>〒????-???? 〇〇〇〇</p>
+      <p><strong>代表者：</strong>代表取締役　栁本 浩汰</p>
+      <p><strong>設立：</strong>2024年3月14日</p>
+      <p><strong>資本金：</strong>15万円</p>
+      <p><strong>従業員数：</strong>20名（2025年9月現在）</p>
+      <p><strong>事業内容：</strong>通信事業、Webサイト制作、デジタルマーケティング支援、システム開発</p>
+      <p><strong>主要取引先：</strong>株式会社〇〇、株式会社△△、株式会社□□</p>
+      <p><strong>取引銀行：</strong>〇〇銀行 〇〇支店</p>
+      <p><strong>URL：</strong>https://www.〇〇〇</p>
     </section>
 
-    <!-- 社員写真 -->
-    <div class="team-photo"></div>
-
+    <!-- 社員紹介 -->
+    <section class="team-section">
+      <div class="team-member">
+        <img src="https://github.com/machichi2525/my-website1/raw/main/S__5603390.jpg" alt="栁本 浩汰">
+        <h3>栁本 浩汰</h3>
+        <p>代表取締役社長</p>
+        <p>企業理念を基に、新たな未来を切り開いています。</p>
+      </div>
+      <div class="team-member">
+        <img src="https://via.placeholder.com/150" alt="田中 満里菜">
+        <h3>田中 満里菜</h3>
+        <p>営業部 部長</p>
+        <p>お客様のニーズを最優先に、プロジェクトを推進しています。</p>
+      </div>
+      <div class="team-member">
+        <img src="https://via.placeholder.com/150" alt="山田 太郎">
+        <h3>山田 太郎</h3>
+        <p>開発部 部長</p>
+        <p>最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
+      </div>
+      <div class="team-member">
+        <img src="https://via.placeholder.com/150" alt="社員4">
+        <h3>社員4</h3>
+        <p>役職4</p>
+        <p>社員紹介文4</p>
+      </div>
+      <div class="team-member">
+        <img src="https://via.placeholder.com/150" alt="社員5">
+        <h3>社員5</h3>
+        <p>役職5</p>
+        <p>社員紹介文5</p>
+      </div>
+    </section>
   </main>
 
   <footer>
