--- a/index.html
+++ b/index.html
@@ -269,4 +269,22 @@
           </div>
         </div>
         <div class="team-member">
-          <div class="
+          <div class="photo">
+            <img src="https://via.placeholder.com/400" alt="山田 太郎">
+          </div>
+          <div class="info">
+            <h4>山田 太郎</h4>
+            <p class="role">開発部 部長</p>
+            <p class="desc">最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>合同会社アンダーウィル - All Rights Reserved</p>
+  </footer>
+
+</body>
+</html>
